feat: full feature, upload doc, chunking, embedding, llm call