@@ -1,5 +1,6 @@
 package org.shark.evolvai.embedding.adapter.output.storage;
 
+import dev.langchain4j.data.document.Metadata;
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.store.embedding.EmbeddingMatch;
@@ -9,10 +10,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
-import java.util.UUID;
 
+import java.time.Instant;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Component
 public class PgVectorEmbeddingStorage implements EmbeddingStorage {
@@ -20,106 +22,80 @@ public class PgVectorEmbeddingStorage implements EmbeddingStorage {
     private static final Logger log = LoggerFactory.getLogger(PgVectorEmbeddingStorage.class);
 
     private final PgVectorEmbeddingStore embeddingStore;
-    private final int dimensions;
-
 
     public PgVectorEmbeddingStorage(
-            @Value("${embedding.pgvector.host:localhost}") String host,
-            @Value("${embedding.pgvector.port:5432}") int port,
-            @Value("${embedding.pgvector.database:postgres}") String database,
-            @Value("${embedding.pgvector.user:postgres}") String user,
-            @Value("${embedding.pgvector.password:}") String password,
-            @Value("${embedding.pgvector.tableName:embeddings}") String tableName,
-            @Value("${embedding.pgvector.dimensions:1536}") int dimensions) {
-
-        this.embeddingStore = PgVectorEmbeddingStore.builder()
-                .host(host)
-                .port(port)
-                .database(database)
-                .user(user)
-                .password(password)
-                .table(tableName)
-                .dimension(dimensions)
-                .build();
-        this.dimensions = dimensions;
-
-        log.info("PgVectorEmbeddingStore inicializado con host={}, db={}, tabla={}, dimensiones={}", host, database, tableName, dimensions);
+            @Value("${embedding.pgvector.host}") String host,
+            @Value("${embedding.pgvector.port}") int port,
+            @Value("${embedding.pgvector.database}") String database,
+            @Value("${embedding.pgvector.user}") String user,
+            @Value("${embedding.pgvector.password}") String password,
+            @Value("${embedding.pgvector.tableName}") String tableName,
+            @Value("${embedding.pgvector.dimensions}") int dimensions
+    ) {
+        try {
+            this.embeddingStore = PgVectorEmbeddingStore.builder()
+                    .host(host)
+                    .port(port)
+                    .database(database)
+                    .user(user)
+                    .password(password)
+                    .table(tableName)
+                    .dimension(dimensions)  // <- IMPORTANTE: agrega esto
+                    .build();
+        } catch (Exception e) {
+            log.error("Error inicializando PgVectorEmbeddingStore", e);
+            throw e;
+        }
     }
 
     @Override
     public void store(String id, Embedding embedding, String text) {
-        log.info("Almacenando embedding con id: {}", id);
-        UUID uuid;
-        try {
-            uuid = UUID.fromString(id);
-        } catch (IllegalArgumentException e) {
-            log.warn("El id '{}' no es un UUID válido. Se generará uno nuevo.", id);
-            uuid = UUID.randomUUID();
-        }
+        Map<String, Object> meta = new HashMap<>();
+        meta.put("documentName", id);
+        meta.put("usuario", "desconocido");
+        meta.put("timestamp", Instant.now().toEpochMilli());
 
-        int expectedDims = this.dimensions;
+        Metadata metadata = Metadata.from(meta);
+        TextSegment segment = TextSegment.from(text, metadata);
+
+        // Ajustar a 1536 dimensiones
         float[] original = embedding.vector();
-        float[] finalVector;
-
-        if (original.length < expectedDims) {
-            float[] padded = new float[expectedDims];
-            System.arraycopy(original, 0, padded, 0, original.length);
-            finalVector = padded;
-            log.info("Embedding rellenado de {} a {} dimensiones", original.length, expectedDims);
-        } else if (original.length > expectedDims) {
-            float[] truncated = new float[expectedDims];
-            System.arraycopy(original, 0, truncated, 0, expectedDims);
-            finalVector = truncated;
-            log.warn("Embedding truncado de {} a {} dimensiones", original.length, expectedDims);
-        } else {
-            finalVector = original;
+        if (original.length > 1536) {
+            throw new IllegalArgumentException("Embedding tiene más de 1536 dimensiones: " + original.length);
         }
+        float[] padded = new float[1536];
+        System.arraycopy(original, 0, padded, 0, original.length);
 
-        log.info("Dimensión final del embedding a guardar: {}", finalVector.length);
-        embeddingStore.add(uuid.toString(), Embedding.from(finalVector));
-        log.info("Embedding almacenado correctamente para id: {}", uuid);
+        Embedding paddedEmbedding = new Embedding(padded);
+        embeddingStore.add(paddedEmbedding, segment);
+        log.info("Embedding almacenado en PgVector con id={}, metadatos={}", id, metadata);
     }
 
     @Override
     public List<EmbeddingMatch<String>> findSimilar(Embedding embedding, int maxResults, double minScore) {
-        log.info("Buscando embeddings similares (maxResults={}, minScore={})", maxResults, minScore);
-
         float[] original = embedding.vector();
-        float[] finalVector;
-        if (original.length < dimensions) {
-            float[] padded = new float[dimensions];
-            System.arraycopy(original, 0, padded, 0, original.length);
-            finalVector = padded;
-            log.info("Embedding de consulta rellenado de {} a {} dimensiones", original.length, dimensions);
-        } else if (original.length > dimensions) {
-            float[] truncated = new float[dimensions];
-            System.arraycopy(original, 0, truncated, 0, dimensions);
-            finalVector = truncated;
-            log.warn("Embedding de consulta truncado de {} a {} dimensiones", original.length, dimensions);
-        } else {
-            finalVector = original;
+        if (original.length > 1536) {
+            throw new IllegalArgumentException("Embedding de búsqueda excede las 1536 dimensiones: " + original.length);
         }
+        float[] padded = new float[1536];
+        System.arraycopy(original, 0, padded, 0, original.length);
 
-        Embedding adjustedEmbedding = Embedding.from(finalVector);
+        Embedding paddedEmbedding = new Embedding(padded);
 
-        List<EmbeddingMatch<TextSegment>> matches = embeddingStore.findRelevant(adjustedEmbedding, maxResults);
-
-        List<EmbeddingMatch<String>> filtered = matches.stream()
-                .filter(match -> match.score() >= minScore)
+        return embeddingStore.findRelevant(paddedEmbedding, maxResults, minScore)
+                .stream()
                 .map(match -> new EmbeddingMatch<>(
                         match.score(),
-                        match.embeddingId(),
+                        match.embedded().metadata().get("documentName").toString(),  // ✅ sacamos el ID del metadata
                         match.embedding(),
-                        match.embedded() != null ? match.embedded().text() : ""
+                        match.embedded().text()
                 ))
-                .collect(Collectors.toList());
-        log.info("Se encontraron {} embeddings similares (después de filtrar por minScore)", filtered.size());
-        return filtered;
-    }
+                .toList();
 
+    }
     @Override
     public void removeAll() {
-        log.warn("Intento de eliminar todos los embeddings: operación no implementada para PgVector");
-        throw new UnsupportedOperationException("No implementado para PgVector");
+        embeddingStore.removeAll();
+        log.warn("Todos los embeddings han sido eliminados de PgVector.");
     }
 }
